--- a/mod/thmod/localisation/english/machine_age_situations_2_l_english.yml
+++ b/mod/thmod/localisation/english/machine_age_situations_2_l_english.yml
@@ -22,7 +22,7 @@
  synth_negative_media_coverage_tt: "Negative Media Coverage"
  biological_pop: "£pop£ Biological Pop"
  biological_pops: "$biological_pop$s"
- mechanical_pop: "£pop£ Mechanical Pop"
+ mechanical_pop: "£pop£ ประชากรจักรกล"
  mechanical_pops: "$mechanical_pop$s"
  pop_is: "is"
  pops_are: "are"
@@ -266,9 +266,9 @@
  synth.405.desc: "Our $job_identity_designer_plural$ have discovered two methods of creating more diverse digital identities.\n\nOne option would be to mix the characteristics of two or more existing personalities to create a new combined identity. Traits that we prefer could be prioritized or be selected at random. Either way, the new identity would surely be more interesting than our current identity copies.\n\nAlternatively, we initialize a new identity from an artificial kernel and let it pass through an accelerated (and simulated) childhood. This way a perfect personality could be designed."
  synth.405.a: "We will mix our identities."
  synth.405.a.vault: "Mix with our digitized ancestors."
- synth.405.a.tt: "Research option gained: £engineering£§Y$tech_identity_fusion$§!\n\nFuture research possibility: £engineering£§Y$tech_identity_initialization$§!"
+ synth.405.a.tt: "ได้รับตัวเลือกการวิจัย: £engineering£§Y$tech_identity_fusion$§!\n\nความเป็นไปได้ในการวิจัยในอนาคต: £engineering£§Y$tech_identity_initialization$§!"
  synth.405.b: "Virtual daycare is optimal."
- synth.405.b.tt: "Research option gained: £engineering£§Y$tech_identity_initialization$§!\n\nFuture research possibility: £engineering£§Y$tech_identity_fusion$§!"
+ synth.405.b.tt: "ได้รับตัวเลือกการวิจัย: £engineering£§Y$tech_identity_initialization$§!\n\nความเป็นไปได้ในการวิจัยในอนาคต: £engineering£§Y$tech_identity_fusion$§!"
  synth.4.name: "A Synthetic Population"
  synth.4.desc: "In a coordinated effort, we have achieved what seemed impossible, transforming our consciousness into code, and our bodies into machines.\n\nThe process was not without difficulty, the transition far from easy. But whatever may have been lost along the way, our new configuration offers endless possibilities."
  synth.4.a: "We will be exceptional."
