--- a/mod/thmod/localisation/english/machine_age_situations_3_l_english.yml
+++ b/mod/thmod/localisation/english/machine_age_situations_3_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- situation_transformation: "Transformation"
+ situation_transformation: "การเปลี่ยนผ่าน"
  situation_transformation_type: "Ascension Situation"
  situation_transformation_desc: "The passive iteration of the mechanical body has come to its logical and inevitable conclusion. A transformative age is upon us, sparked by innovation and oiled by opportunity."
  situation_transformation_monthly_change_tooltip: "Our machine bodies are preparing for transformation."
@@ -15,7 +15,7 @@
  transformation_waste_recycle_tt: "Recycle Old Bodies"
  transformation_speed: "§Y$situation_transformation$§! situation speed"
  situation_transformation_pause_desc: "$situation_cyberization_pause_desc$"
- REQUIRES_FINISHED_TRANSFORMATION: "$TRIGGER_FAIL$Has finished the §Y$situation_transformation$§! situation"
+ REQUIRES_FINISHED_TRANSFORMATION: "$TRIGGER_FAIL$แล้วเสร็จสถานการณ์ §Y$situation_transformation$§!"
  machine_drone: "drone"
  machine_drone_plural: "drones"
  machine_person: "person"
@@ -23,7 +23,7 @@
  concept_tradition_nanotech: "$tradition_nanotech$"
  concept_tradition_modularity: "$tradition_modularity$"
  concept_tradition_virtuality: "$tradition_virtuality$"
- machine_age.4100.name: "The Transformation"
+ machine_age.4100.name: "การเปลี่ยนผ่าน"
  machine_age.4100.desc: "Despite the superiority of the machine form, our advancement has remained iterative at best. Self-imposed safety standards have resulted in stagnation. Conclusion: more drastic measures required.\n\nSmall-scale experiments suggest three distinct options for growth: §YNanotechnology§! and its variable form-shifting advantages; §YModularity§! for individual units optimized with specific characteristics; and §YVirtuality§! - the abandonment of the physical form in favor of a digital existence.\n\nEvaluation process initialized. Analyze options and deliberate."
  machine_age.4110.name: "Transformation Research: Nanites"
  machine_age.4110.desc: "Preliminary research suggests electromechanical constructs called §Ynanites§! present a promising vector for advancement. While rare, they possess unique qualities, including programmability, self-replication, and the ability to form a 'swarm intellect.'\n\nThis technology offers unmatched transformational capabilities, but the requirements to support it remain unclear.\n\nPotential: significant; scalable. Cost: unknown. Additional research required."
@@ -44,7 +44,7 @@
  machine_age.4150.name: "Noteworthy Nanotech Discoveries"
  machine_age.4150.desc: "Due to the complexity of the subject matter combined with minimal research effort, our knowledge of §Ynanite§! technology remains rudimentary. The limited projections include nano-replication and reconfiguration as enablers for large-scale structures. Additional resources are likely required to support such projects.\n\nViability: inconclusive."
  machine_age.4150.a.tt: "§Y$situation_transformation$§! situation modifier removed:\nResearch Speed (£engineering£ §YEngineering§!)"
- nanite_replicator: "Nanite Replicator"
+ nanite_replicator: "เครื่องจำลองนาไนต์"
  d_nanites_medium: "$nanite_replicator$ Omega"
  d_nanites_medium_desc: "A complex of finely tuned interconnected Nanite Replication Chambers allows us to enhance their self-replication capabilities fully."
  d_nanites_small: "$nanite_replicator$ Alpha"
