--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -1143,7 +1143,7 @@
  mod_job_gas_refiner_per_pop:0 "§G+1§! อาชีพ $job_gas_refiner$ ต่อ $VALUE$ ประชากร"
  mod_job_gas_refiner_per_pop_short:0 "\n§G+1§! £mod_job_gas_refiner_add£ ต่อ $VALUE$ £pop£"
  job_roboticist:0 "นักสร้างหุ่นยนต์"
- job_roboticist_plural:0 "นักสร้างหุ่นยนต์"
+ job_roboticist_plural:0 "นักวิทยาการหุ่นยนต์"
  job_roboticist_plural_with_icon: "£job_roboticist£ $job_roboticist_plural$"
  job_roboticist_desc:1 "These technicians build robots, that the robots may build for the nation."
  job_roboticist_effect_desc:1 "£job_roboticist£ $job_roboticist_plural$ เปลี่ยน £alloys£ §Y$alloys$§! เป็น £pop£ §Yประชากรหุ่นยนต์§! (ใหม่)"
@@ -1536,7 +1536,7 @@
  mod_planet_pop_assemblers_unity_produces_add: "£unity£ $unity$ จาก [GetPopAssemblersPluralWithIcon]"
  mod_planet_pop_assemblers_upkeep_mult:1 "ค่าบำรุงรักษา [GetPopAssemblersPlural]"
  mod_planet_pop_assemblers_energy_upkeep_add:2 "ค่าบำรุงรักษา [GetPopAssemblersPlural] $r_energy$"
- mod_planet_pop_assemblers_sr_living_metal_upkeep_add: "§Y[GetPopAssemblersPluralWithIcon]§! £sr_living_metal£ $sr_living_metal$ Upkeep"
+ mod_planet_pop_assemblers_sr_living_metal_upkeep_add: "§Y[GetPopAssemblersPluralWithIcon]§! มีค่าบำรุงรักษาที่เป็น £sr_living_metal£ $sr_living_metal$"
  mod_planet_jobs_slave_produces_mult:1 "ประชากร$pop_cat_slave$ให้ผลผลิตที่เป็นทรัพยากร"
  mod_planet_jobs_worker_produces_mult:3 "ผลผลิตทรัพยากรจากประชากร [GetWorker]"
  mod_planet_jobs_worker_only_produces_mult:0 "ประชากร$pop_cat_worker$ให้ผลผลิตที่เป็นทรัพยากร"
