--- a/mod/thmod/localisation/english/paragon_4_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_4_l_english.yml
@@ -277,7 +277,7 @@
  leader_trait_defence_engineer_2_machine_desc:0 "$leader_trait_defence_engineer_machine_desc$"
  leader_trait_spycraft_hive:1 "Intelligence Gatherer"
  leader_trait_spycraft_hive_desc:1 "This node processes information gathered from ongoing espionage operations."
- leader_trait_spycraft_machine:0 "Espionage Subroutines"
+ leader_trait_spycraft_machine:0 "รูทีนย่อยการจารกรรม"
  leader_trait_spycraft_machine_desc:1 "This node processes information gathered from ongoing espionage operations."
  leader_trait_spycraft_2_hive:0 "$leader_trait_spycraft_hive$ II"
  leader_trait_spycraft_2_hive_desc:0 "$leader_trait_spycraft_hive_desc$"
@@ -761,7 +761,7 @@
  leader_trait_adaptable_2_machine_desc:0 "$leader_trait_adaptable_machine_desc$"
  leader_trait_politician_hive:0 "Node Enhancer"
  leader_trait_politician_hive_desc:1 "This drone was selectively bred to enhance hive cohesion."
- leader_trait_politician_machine:0 "Node Incrementor"
+ leader_trait_politician_machine:0 "ตัวเพิ่มโหนด"
  leader_trait_politician_machine_desc:1 "This unit's programming has advanced algorithms which enhance unit cohesion."
  leader_trait_politician_2_hive:0 "$leader_trait_politician_hive$ II"
  leader_trait_politician_2_hive_desc:0 "$leader_trait_politician_hive_desc$"
@@ -769,7 +769,7 @@
  leader_trait_politician_2_machine_desc:0 "$leader_trait_politician_machine_desc$"
  leader_trait_capitalist_hive:0 "Power Sub-Supplier"
  leader_trait_capitalist_hive_desc:1 "This drone maintains decentralized power systems."
- leader_trait_capitalist_machine:0 "Server Overseer"
+ leader_trait_capitalist_machine:0 "ผู้ดูแลเซิร์ฟเวอร์"
  leader_trait_capitalist_machine_desc:1 "This unit is programmed to maintain decentralized power systems."
  leader_trait_capitalist_2_hive:0 "$leader_trait_capitalist_hive$ II"
  leader_trait_capitalist_2_hive_desc:0 "$leader_trait_capitalist_hive_desc$"
