--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -13,7 +13,7 @@
  TRADITION_ADOPT_BUTTON:0 "เลือกใช้"
  TRADITION_SELECT_BUTTON:0 "เลือก"
  TRADITIONS_ADOPT:1 "§Eเอฟเฟกต์เมื่อเลือกใช้§!:\n"
- TRADITIONS_FINISH:3 "§EFinisher Effects§!:\nAdopting all $CATEGORY|Y$ traditions grants:\n"
+ TRADITIONS_FINISH:3 "§Eเอฟเฟกต์เมื่อทำเสร็จ§!:\nใช้วัฒนธรรม $CATEGORY|Y$ ทั้งหมดจะได้รับ:\n"
  TRADITIONS_FINISH_AP:2 "$MOD_COUNTRY_ASCENSION_PERKS_ADD$: §G+1§!"
  TRADITION_COST:0 "ค่าใช้จ่ายวัฒนธรรม"
  TRADITIONS_UNAFFORDABLE:0 "§Rเราต้องการเพิ่มอีก §Y$RESOURCES$§! จึงจะปลดล็อกวัฒนธรรมนี้ได้§!"
@@ -546,7 +546,7 @@
  tr_genetics_creation_desc:1 "Can §Yalter§! Pop §Yappearance§! with Species Modification\nAllows the Assimilation of Pops into or out of a §YHive-Mind§!"
  tr_genetics_enhanced_expression:0 "การแสดงออกของยีน"
  tr_genetics_enhanced_expression_delayed:0 "Selectively targeting sequences allows for artificial atavism, in which previously regressed traits can be expressed."
- tr_genetics_enhanced_expression_desc:1 "Unlocks §YAdvanced§! Traits for Species Modification"
+ tr_genetics_enhanced_expression_desc:1 "ปลดล็อกคุณลักษณะ §Yขั้นสูง§! สำหรับการปรับเปลี่ยนเผ่าพันธุ์"
  tr_genetics_retrovirus:0 "การจัดการด้วยไวรัส"
  tr_genetics_retrovirus_delayed:1 "Retroviral agents allow our population to quickly acclimatize to any environment."
  tr_genetics_efficient_cloning:0 "กระตุ้นเซลล์ต้นกำเนิด (สเต็มเซลล์)"
@@ -607,7 +607,7 @@
  tr_cybernetics_modular_cybernetics_hive_tt:0 "£building£ §Y$building_spawning_pool$§! provide §G+2§! £job_augmentor_drone£ §Y$job_augmentor_drone$§! Jobs.\n$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-50%§!"
  tr_cybernetics_modular_cybernetics_situation_effects: "$tr_cybernetics_situation$$tr_cybernetics_modular_cybernetics_tt_2$"
  tr_cybernetics_modular_cybernetics_hive_situation_effects: "$tr_cybernetics_situation$$tr_cybernetics_modular_cybernetics_hive_tt$"
- REQUIRES_CYBORG_EMPIRE:1 "$TRIGGER_FAIL$Has finished the §Y[GetCyberSituation]§! situation"
+ REQUIRES_CYBORG_EMPIRE:1 "$TRIGGER_FAIL$แล้วเสร็จสถานการณ์ §Y[GetCyberSituation]§!"
  REQUIRES_CYBORG_EMPIRE_UTOPIA: "$TRIGGER_FAIL$Has completed §Y$FLESH_IS_WEAK_PROJECT$§! special project"
  mod_planet_cyborg_jobs_produces_mult:0 "ทรัพยากรจากประชากรไซบอร์ก"
  mod_planet_cyborg_jobs_physics_research_produces_mult: "£physics_research£ $physics_research$ จากประชากรไซบอร์ก"
@@ -626,7 +626,7 @@
  tr_cybernetics_assimilator_metabolic_reprocessing_desc:0 "ค่าบำรุงรักษาไซบอร์ก: §G-10%§!\nขนาดของจักรวรรดิจากประชากรไซบอร์ก: §G-10%§!"
  tr_cybernetics_assimilator_integrated_anatomy:0 "รวมเข้ากับร่างกาย"
  tr_cybernetics_assimilator_integrated_anatomy_delayed:0 "Only through the amalgamation of flesh, steel, and nano-carbon composite can we truly reach perfection."
- tr_cybernetics_assimilator_integrated_anatomy_desc:0 "ปลดล็อกคุณลักษณะ §Yไซเบอร์เนติก§!  สำหรับการปรับเปลี่ยนเผ่าพันธุ์"
+ tr_cybernetics_assimilator_integrated_anatomy_desc:0 "ปลดล็อกคุณลักษณะ §Yไซเบอร์เนติก§! สำหรับการปรับเปลี่ยนเผ่าพันธุ์"
  tr_cybernetics_assimilator_gestation:0 "Gestation Worlds"
  tr_cybernetics_assimilator_gestation_delayed:0 "A designated world that focuses on maturing and transitioning biological units seamlessly into fully integrated cybernetic entities of the collective."
  tr_cybernetics_assimilator_gestation_desc:0 "Gain access to the §Y$col_gestation$§! Colony Desigation.\n§YGestation Worlds§! provide §Y£job_gestation_drone£ $job_gestation_drone$§! Jobs providing Empire-wide £mod_pop_growth_speed£ §Y$MOD_POP_GROWTH_SPEED$§!"
@@ -641,7 +641,7 @@
  tr_synthetics_adopt_utopia: "$tr_synthetics_adopt$"
  tr_synthetics_adopt_utopia_desc: "Unlocks a §YSpecial Project§! to transfer the minds of our citizens into §YSynthetic§! bodies.\nTech progress gained (if not researched):$TABBED_NEW_LINE$£engineering£ §Y$tech_synthetic_leaders$§! §G+10%§!"
  tr_synthetics_finish:0 "วัฒนธรรมจักรกลสังเคราะห์สำเร็จ"
- tr_synthetics_finish_machine_desc:0 "All §Y$trait_machine_unit$§! leaders gain the §Y$leader_trait_synthetic$§! trait."
+ tr_synthetics_finish_machine_desc:0 "ผู้นำ §Y$trait_machine_unit$§! ทั้งหมดได้รับคุณลักษณะ §Y$leader_trait_synthetic$§!"
  tr_synthetics_finish_situation_effects: "\n$tr_synthetics_situation_during$Situation Speed: §G+25%§!$tr_synthetics_situation_after$$mod_ROBOT_species_trait_picks_add$: §G+2§!\n$mod_ROBOT_species_trait_points_add$: §G+2§!\n$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-50%§!\n$MOD_COUNTRY_ASCENSION_PERKS_ADD$: §G+1§!"
  tr_synthetics_situation_during: "§HDuring $situation_digitization$§!\n"
  tr_synthetics_situation_after: "\n\n§SAfter $situation_digitization$§!\n"
