--- a/mod/thmod/localisation/english/aquatics_l_english.yml
+++ b/mod/thmod/localisation/english/aquatics_l_english.yml
@@ -168,7 +168,7 @@
  aquatics.5.desc.1:0 "$aquatics.5.desc.intro$\n\nTerraforming this [From.GetPlanetMoon] would theoretically be possible, but we do not yet possess the means to accomplish this monumental task within a realistic timeframe."
  aquatics.5.desc.2:0 "$aquatics.5.desc.intro$\n\nThe energy costs would be daunting, but we do have the means to gradually terraform this [From.GetPlanetMoon] into something that would support life once again."
  FROZEN_TERRAFORMING_CANDIDATE_EFFECT:0 "§Y[From.GetName]§! will be able to be terraformed if we choose the §H$ap_hydrocentric$§! ascension perk and research the £society£ §H$tech_climate_restoration$§! technology."
- sm_ice_mining_station:0 "Ice Mining Station"
+ sm_ice_mining_station:0 "สถานีขุดน้ำแข็ง"
  sm_ice_mining_station_desc:0 "This system is a plentiful source of unexploited ice. By setting up a harvesting station here, we could see it put to better use, creating habitable oceans for our kind.\n\n$ice_mining_details$\n"
  ice_mining_station_tooltip:2 "System Modifier:\n    $mod_station_gatherers_produces_mult$: §G+15%§!\nUnlocks the §Y$decision_expand_planetary_sea$§! Decision on Ocean worlds.\nUnlocks the §Y$decision_flood_habitat$§! decision on §YHabitats§!."
  requires_ice_source:0 "§RRequires an ice asteroid or frozen world in the system.§!"
