--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -443,7 +443,7 @@
  buildable_robot_pop_4_desc:0 "$trait_robotic_3_desc$"
  buildable_machine_pop:0 "$trait_machine_unit$"
  buildable_machine_pop_desc:0 "$trait_machine_unit_desc$"
- buildable_modded_robot_pop:0 "Mechanical Pop Templates"
+ buildable_modded_robot_pop:0 "Template ประชากรจักรกล"
  buildable_modded_robot_pop_machine_intelligence:0 "Machine Pop Templates"
  buildable_modded_robot_pop_desc:0 "$trait_mechanical_desc$"
  buildable_modded_robot_pop_desc_machine_intelligence:0 "$trait_machine_unit_desc$"
@@ -3617,13 +3617,13 @@
  FLEETORDER_MOVE:0 "กำลังเคลื่อนที่"
  FLEETORDER_MOVE_OTHER_SYSTEM:1 "กำลังย้ายไปที่ระบบดาว $SYSTEM|Y$"
  FLEETORDER_MOVE_WINDUP_WARP:1 "กำลังเตรียมวาร์ปไปที่ $SYSTEM|H$: $DAYS|Y0$ วัน"
- FLEETORDER_MOVE_WINDUP_WARP_EXT:0 "Winding up for Warp to $SYSTEM|H$\nProgress: $CUR|Y0$/$COST|Y0$ ($DAYS|Y$ Days)"
+ FLEETORDER_MOVE_WINDUP_WARP_EXT:0 "กำลังเพิ่มความเร็วเพื่อวาร์ปไป $SYSTEM|H$\nความคืบหน้า: $CUR|Y0$/$COST|Y0$ ($DAYS|Y$ วัน)"
  FLEETORDER_MOVE_IN_WARP:1 "กำลังวาร์ปไปที่ $SYSTEM|Y$"
- FLEETORDER_MOVE_SINGLESHIP_WINDOWN_WARP:0 "Warp Wind-down: $DAYS|Y0$ Days"
- FLEETORDER_MOVE_SINGLESHIP_WINDOWN_WARP_EXT:0 "Winding down after Warp from $SYSTEM|H$\nProgress: $CUR|Y0$/$COST|Y0$ ($DAYS|Y0$ Days)"
+ FLEETORDER_MOVE_SINGLESHIP_WINDOWN_WARP:0 "ลดความเร็วหลังการวาร์ป: $DAYS|Y0$ วัน"
+ FLEETORDER_MOVE_SINGLESHIP_WINDOWN_WARP_EXT:0 "กำลังลดความเร็วหลังการวาร์ปจาก $SYSTEM|H$\nความคืบหน้า: $CUR|Y0$/$COST|Y0$ ($DAYS|Y0$ วัน)"
  FLEETORDER_MOVE_SINGLESHIP_MOVING_INTO_POSITION_WARP:0 "ตำแหน่งสำหรับวาร์ปไปที่ $SYSTEM|H$"
- FLEETORDER_MOVE_SINGLESHIP_WINDOWN_JUMPDRIVE:0 "Jump Wind-down: $DAYS|Y0$ Days"
- FLEETORDER_MOVE_SINGLESHIP_WINDOWN_JUMPDRIVE_EXT:0 "Winding down after Jump from $SYSTEM|H$\nProgress: $CUR|Y0$/$COST|Y0$ ($DAYS|Y0$ Days)"
+ FLEETORDER_MOVE_SINGLESHIP_WINDOWN_JUMPDRIVE:0 "ลดความเร็วหลังการจั้ม: $DAYS|Y0$ วัน"
+ FLEETORDER_MOVE_SINGLESHIP_WINDOWN_JUMPDRIVE_EXT:0 "กำลังลดความเร็วหลังการจั้มจาก $SYSTEM|H$\nความคืบหน้า: $CUR|Y0$/$COST|Y0$ ($DAYS|Y0$ วัน)"
  FLEETORDER_ORBIT:1 "กำลังเข้าสู่วงโคจรของ $PLANET|Y$"
  FLEETORDER_UPGRADE_DESIGN_STATION:0 "อัปเกรดสถานี: $PROGRESS|Y%0$"
  FLEETORDER_UPGRADE_DESIGN:1 "กำลังอัปเกรดยาน ($PLANET|Y$): $PROGRESS|Y%0$"
@@ -12297,7 +12297,7 @@
  RESYNC_OOS: "Resync"
  RESYNC_OOS_TOOLTIP_SERVER: "Send a resync request to all players"
  RESYNC_OOS_TOOLTIP_CLIENT: "Wait for the server to send a resync request"
- MOD_VERSION:0 "Mod v0.73.2, Update 23/05/2024"
+ MOD_VERSION:0 "Mod v0.73.3, Update 26/05/2024"
  MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - Arc Furnace -> เตาหลอมอาร์ก\n - Synaptic Lathe -> เครื่องกลึงไซแน็ปติก\n - Dyson Swarm -> ฝูงไดสัน\n - Horizon Needle -> เข็มฮอร์ริซอน \n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons, Overlord \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
